--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,11 +13,11 @@ body{
 
 .cabecera{
     color: white;
-    background-color: rgb(37, 37, 165);
+    background-color: rgb(8, 92, 33);
     font-weight: bold;
     padding: 5px;
-    text-align: left;
     box-shadow: 5px 5px 5px black;
     margin-bottom: 20px;
+    border-radius: 10px;
 
 }
