volvi a una tipografia calabri y color negro

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,4 +26,7 @@ p{
     text-align: left;
     padding-left: 40px;
     font-weight: bold;
+    font-family: Calibri;
+    font-size: 1.5em;
+    color: black;
 }
